overflow fix try 2

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,23 @@
  * # base style overrides
  *
  * ------------------------------------------------------------------- */
-html {
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 1.5),
+only screen and (-o-min-device-pixel-ratio: 3/2),
+only screen and (min--moz-device-pixel-ratio: 1.5),
+only screen and (min-device-pixel-ratio: 1.5){
+
+  html,
+  body{
+    width:100%;
+    overflow-x:hidden;
+  }
+
+}
+
+
+ html {
   font-size: 10px;
 }
 @media only screen and (max-width: 400px) {
@@ -23,6 +39,8 @@ html,body
   padding: 0px;
   /* overflow-x: hidden;  */
 }
+
+
 
 body {
   background: #111111;
